Fix layout on mobile

--- a/index.css
+++ b/index.css
@@ -329,6 +329,11 @@ body > *:not(.profile):not(.page-nav):first-of-type {
             list-style: none;
         }
 
+    section {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+
     .accordion,
     .section-box,
     .profile-text-box {
@@ -337,7 +342,7 @@ body > *:not(.profile):not(.page-nav):first-of-type {
         min-width: 260px;
         margin-left: auto;
         margin-right: auto;
-        padding: 12px;
+        padding: 12px 16px;
         box-sizing: border-box;
         text-align: center;
     }
